--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,13 +26,17 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation "androidx.appcompat:appcompat:1.0.2"
+    implementation 'androidx.appcompat:appcompat:1.1.0-alpha05'
     implementation "androidx.core:core-ktx:1.0.2"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 
     // mlkit
     implementation "com.google.firebase:firebase-ml-vision:20.0.0"
 
+    // camera-x
+    def camerax_version = "1.0.0-alpha01"
+    implementation "androidx.camera:camera-core:${camerax_version}"
+    implementation "androidx.camera:camera-camera2:${camerax_version}"
 
     // tests
     testImplementation "junit:junit:4.12"
