--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,11 @@ dependencies {
     implementation "androidx.core:core-ktx:1.0.2"
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 
-    // mlkit
-    implementation "com.google.firebase:firebase-ml-vision:20.0.0"
+    // ml-kit
+    implementation 'com.google.firebase:firebase-ml-vision:20.0.0'
+    implementation 'com.google.firebase:firebase-ml-vision-image-label-model:17.0.2'
+    implementation 'com.google.firebase:firebase-ml-vision-face-model:17.0.2'
+    implementation 'com.google.firebase:firebase-ml-model-interpreter:19.0.0'
 
     // camera-x
     def camerax_version = "1.0.0-alpha01"
@@ -43,3 +46,4 @@ dependencies {
     androidTestImplementation "androidx.test:runner:1.1.1"
     androidTestImplementation "androidx.test.espresso:espresso-core:3.1.1"
 }
+apply plugin: 'com.google.gms.google-services'
