--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,13 @@ apply plugin: "kotlin-android-extensions"
 apply plugin: "com.google.gms.google-services"
 
 android {
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+}
+
+android {
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.gromyk.mlkit"
